--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.App {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
 canvas {
   border: 1px solid black;
   margin: 5px;
