--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ canvas {
   margin: 5px;
 }
 
-.numberInput {
+.frameInput {
   width: 50px;
   margin-right: 4px;
 }
@@ -18,4 +18,8 @@ canvas {
   margin: 5px auto;
   display: flex;
   border-radius: 5px;
+}
+
+.numberInput {
+  width: 70px;
 }
