--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,21 @@ canvas {
   align-content: flex-start;
   width: 100%;
 }
+
+.colorIndicator {
+  display: inline;
+  width: 50px;
+  height: 50px;
+  margin: 0 5px;
+  border-radius: 4px;
+  background-color: #DDD;
+  padding: 5px;
+}
+
+.colorIndicator div {
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
+}
+
+
