--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,20 @@ header h1 {
 
 .main {
   display: flex;
+  flex-direction: column;
 }
 
 canvas {
   border: 1px solid black;
   margin-right: 3px;
   background-image: url(./background.svg);
+}
+
+.toolBox {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  width: 320px;
 }
 
 .toolContainer {
@@ -47,10 +55,6 @@ canvas {
 
 .inputContainer {
   display: block;
-  margin: 0 2px;
-}
-
-.inputContainer {
   margin: 5px auto;
 }
 
